--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         <li>Compare your code with the result on the browser and answer questions:</li>
         <li>Where is the content of : <title>, <h1>, <p> ?</li>
         <li>What is the meaning of : <title>, <h1>, <p> ?</li>
-        <ul> answer
+    </p>
+    <p>answer
             <li>HTML is the language to create web pages</li>
             <li>HyperText Markup Language.</li>
-        </ul>
+    </p>   
          
-    </p>
 </body>
 </html>
